# digehealth-poc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: config.yaml
scripts/: lora_finetune.py  train.py
src/: data.py  model.py  utils.py
src/base/: base_model.py
